book/src/captured/voting_step3_interface_red.txt
error[E0422]: cannot find struct, variant or union type `Vote` in module `voting_candidate::client::args`
5 |     let _ = voting_candidate::client::args::Vote { poll_id: 1, candidate: String::new() };
  |                                          ^^^^ not found in `voting_candidate::client::args`
